@@ -1,3 +1,8 @@
+Change 598 on 2000/09/13 by <gbarr@pobox.com> (Graham Barr)
+
+	Net::LDAP::Schema
+	- Prevent Out of memory error with 5.6.0
+
 Change 597 on 2000/09/12 by <gbarr@pobox.com> (Graham Barr)
 
 	Release 0.21
